--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -1308,9 +1308,9 @@
         \begin{gather*}
              \phi([\alpha]) = \phi([\beta]) \overset{?}{\Rightarrow} [\alpha]=[\beta]
         \end{gather*}
-        Sabiendo que $\hat{\alpha}(1) = \phi([\alpha])$ y $\hat{\beta}(1) = \phi([\beta])$. Como $\hat{\alpha}(1)=\hat{\beta}(1)$ consideramos $\hat{\alpha} \ast \hat{\tilde{\beta}}$ que es un lazo basado en $r_0$. Como $R$ es simplemente conexo tenemos que
+        Sabiendo que $\hat{\alpha}(1) = \phi([\alpha])$ y $\hat{\beta}(1) = \phi([\beta])$. Como $\hat{\alpha}(1)=\hat{\beta}(1)$ consideramos $\hat{\alpha} \ast \tilde{\hat{\beta}}$ que es un lazo basado en $r_0$. Como $R$ es simplemente conexo tenemos que
         \begin{gather*}
-            [\hat{\alpha}] \ast \left[\hat{\tilde{\beta}}\right] = \left[\hat{\alpha} \ast \hat{\tilde{\beta}}\right] = [\veps_{r_0}]
+            [\hat{\alpha}] \ast \left[\tilde{\hat{\beta}}\right] = \left[\hat{\alpha} \ast \tilde{\hat{\beta}}\right] = [\veps_{r_0}]
         \end{gather*}
         por lo que se tiene 
         \begin{gather*}
