--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_0.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_0.tex
@@ -127,7 +127,7 @@
 
     \begin{figure}[H]
         \centering
-        \begin{tikzpicture}
+        \begin{tikzpicture}[scale=0.8]
             \begin{axis}[
                 axis lines=left,
                 height=8cm, width=10cm,
@@ -244,7 +244,7 @@
 
     \begin{figure}[H]
         \centering
-        \begin{tikzpicture}
+        \begin{tikzpicture}[scale=0.8]
             \begin{axis}[
                 axis lines=left,
                 height=8cm, width=10cm,
