--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -2866,6 +2866,142 @@ Parece intuitivo que el grupo fundamental de una circunferencia es el trivial ya
             \end{scope}
         \end{tikzpicture}
     \end{figure}
-
 \end{teo}
 
+\section{El teorema de Seifert-van Kampen}
+
+En primer lugar fijaremos los preliminares algebraicos necesarios para estudiar el teorema relativo a esta sección. Utilizaremos la notación multiplicativa de grupos que facilitará su comprensión.
+
+\begin{notacion}
+    Dado un grupo $(G, \cdot)$ denotaremos por $e$ a su elemento neutro y para cada $g\in G$ usaremos la notación $g^{-1}$ para denotar a su inverso.\\
+
+    Dado $n\in \bb{Z}$ denotaremos por $g^n$ a 
+    \begin{gather*}
+        g^n = \left\{
+            \begin{array}{l c c}
+                g\cdot \overset{(n)}{...} \cdot g & \text{ si } & n\geq 1\\
+                e & \text{ si } & n=0\\
+                g^{-1}\cdot \overset{(n)}{...} \cdot g^{-1} & \text{ si } & n\leq -1
+            \end{array}
+        \right.
+    \end{gather*}
+    Recordemos que $H\subseteq G$ es un subgupo de $G$ si $h_1\cdot h_2^{-1}\in H$ para todo $h_1,h_2\in H$.\\
+
+    Si $H$ es un subgrupo de $G$ lo denotaremos por $H<G$. Si además se tiene que $g\cdot h \cdot g^{-1}\in H$ para todo $g\in G$, $\forall h \in H$ se dice que $H$ es un subgrupo normal. En este caso lo denotamos por $H \lhd G$.
+\end{notacion}
+
+\subsection{Grupo cociente}
+
+\begin{definicion}
+    Dado $H$ un subgrupo de $G$ definimos la relación de equivalencia $R$ dada por 
+    \begin{gather*}
+        g_1 R g_2 \overset{def}{\sii} g_1\cdot g_2^{-1}\in H\ \ \ \forall g_1,g_2\in H
+    \end{gather*}
+    Dado $g\in G$ denotamos por 
+    \begin{gather*}
+        [g]=H\cdot g = \{h\cdot g : h\in H\}
+    \end{gather*}
+    a la clase de equivalencia de $g$ bajo la relación de equivalencia $R$.
+\end{definicion}
+
+\begin{observacion}
+    Es importante observar que la definición
+    \begin{gather*}
+        [g_1] \cdot [g_2] \overset{def}{=} [g_1\cdot g_2]
+    \end{gather*}
+    no está bien hecha para $H<G$ cualquiera. De hecho solo estaría bien definida si y solo si $H\lhd G$. En este caso podemos considerar el conjunto cociente 
+    \begin{gather*}
+        G/H = \{[g] : g\in G\}
+    \end{gather*}
+    que con la operación anterior tiene la estructura de grupo.
+\end{observacion}
+
+\begin{ejemplo}
+    Para $G=\bb{Z}$ y $H=n\bb{Z}$ con $n\geq 2$ entero tendremos que $H\lhd G$ por ser $H$ conmutativo. Además se tendrá que 
+    \begin{gather*}
+        G/H \equiv \bb{Z}_n
+    \end{gather*}
+\end{ejemplo}
+
+\subsection{Subgrupo normal generado por un conjunto}
+
+\begin{observacion}
+    Dado un grupo $G$, la intersección cualquiera de subgrupos normales de $G$ es un subgrupo normal en $G$.
+\end{observacion}
+
+\begin{definicion}
+    Dado $C\subseteq G$ subconjunto cualquiera de $G$ no vacío, existe el menor subgrupo normal que lo contiene (dado por la intersección de todos los subgrupos normales que contienen a $C$, que al menos es el total). Lo notaremos por $\langle C  \rangle_N$ y diremos que es el \textbf{subgrupo normal de $G$ generado por $C$}.
+\end{definicion}
+
+\begin{observacion}
+    Se puede caracterizar el subgrupo normal de $G$ generado por $C$ de la siguiente forma:
+    \begin{gather*}
+        g\in \langle C  \rangle_N \sii g = (g_1 \cdot c_1^{n_1} \cdot g_1^{-1}) \cdot (g_2 \cdot c_2^{n_2} \cdot g_2^{-1}) \cdot ... \cdot (g_k \cdot c_k^{n_k} \cdot g_k^{-1})
+    \end{gather*}
+    donde $g_i\in G$, $c_i\in C$, $n_i\in \bb{Z}$ para todo $i\in 1, 2, ..., k$
+\end{observacion}
+
+\subsection{Producto libre de grupos}
+
+\begin{definicion}
+    Sea $\{G_i\}_{i\in I}$ una familia de grupos donde todos los elementos de la familia son disjuntos, es decir, $G_i\cap G_j = \emptyset$ si $i\neq j$. Denotamos por $e_i$ al elemento neutro de $G_i$.\\
+    
+    Llamamos \textbf{letra} a un elemento $x\in \bigcup\limits_{i\in I} G_i$ de cualquiera de los grupos. \\
+
+    Llamamos \textbf{palabra} a una yuxtaposición de letras, $w = x_1 x_2... x_m$ donde $m$ es un entero no negativo. Si $m=0$ se le suele llamar \textbf{palabra vacía} y la denotaremos por $w=1$. Al número $m$ lo llamaremos \textbf{longitud de la palabra}.\\
+
+    Llamaremos \textbf{sílaba} a cada palabra con 2 letras.\\
+
+    Diremos que 2 palabras $w_1=x_1x_2...x_m$ y $w_2=y_1y_2...y_k$ son iguales si $m=k$ y $x_i=y_i$ para todo $i\in 1,2,...,m=k$.
+\end{definicion}
+
+\begin{definicion}
+    En el conjunto de todas las palabras definimos la aplicación yuxtaposición que a cada dos palabras $w_1=x_1x_2...x_m$ y $w_2=y_1y_2...y_k$ le hace corresponder la nueva palabra
+    \begin{gather*}
+        w_1w_2 = x_1x_2,...x_my_1,y_2...y_k
+    \end{gather*}
+    Esta operación tiene un elemento neutro ($w=1$) y es asociativa.
+\end{definicion}
+
+\begin{definicion}
+    Dada una palabra $w=x_1x_2...x_m$ diremos que es \textbf{reducida} si verifica las siguientes propiedades:
+    \begin{enumerate}
+        \item No existen dos letras consecutivas del mismo grupo.
+        \item No aparece ningún elemento neutro $e_i$.
+    \end{enumerate}
+\end{definicion}
+
+\begin{observacion}
+    Dada una palabra cualquiera $w=x_1x_2...x_m$ podemos reducirla con el siguiente procedimiento:
+    \begin{enumerate}
+        \item Cuando hay dos letras consecutivas del mismo grupo se multiplican ussando la operación de ese grupo.
+        \item Se eliminan todos los elementos neutros $e_i$ de la palabra.
+    \end{enumerate}
+    % El conjunto de las palabras reducidas con la operación de yuxtaposición y reducción sí forman un grupo.
+\end{observacion}
+
+\begin{definicion}
+    En el conjunto de las palabras reducidas podemos definir la operación yuxtaposición $+$ reducción. Esto dota al conjunto de las palabras reducidas de estructura de grupo. A este grupo se le suele denotar por $\underset{i\in I}{\ast}G_i$ y se llama \textbf{producto libre} de los $G_i$.
+\end{definicion}
+
+\begin{ejemplo}
+    Consideramos los siguientes conjuntos:
+    \begin{gather*}
+        G_1 = \bb{Z}_2 = \{e_1, a\}: e_1 \text{ es el neutro},\ \ a\cdot a = e_1\\
+        G_2 = \bb{Z}_2 = \{e_2, b\}: e_2 \text{ es el neutro},\ \ b\cdot b = e_2
+    \end{gather*}
+    y las siguientes palabras:
+    \begin{gather*}
+        w_1 = e_1aae_2ab\\
+        w_2=be_2e_1ab
+    \end{gather*}
+    y tendríamos 
+    \begin{gather*}
+        w_1 \thicksim aae_2ab \thicksim e_1e_2ab \thicksim ab\\
+        w_2 \thicksim bab
+    \end{gather*}
+    Si pensamos en el conjunto de las palabras reducidas tenemos 
+    \begin{gather*}
+        G_1 \ast G_2 = \{1, a, b, ab, ba, aba, bab, ...\}
+    \end{gather*}
+\end{ejemplo}
