--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -2687,8 +2687,8 @@ Parece intuitivo que el grupo fundamental de una circunferencia es el trivial ya
             \node at (-2,2) {$A_1$};
             \node at (3,1) {$A_2$};
 
-            \draw[thick, rotate around={30:(-2,0)}] (-2,0) ellipse (2 and 1);
-            \draw[thick, rotate around={-40:(3,-1)}] (3,-1) ellipse (2 and 1);
+            \draw[thick, red, fill=red!20, rotate around={30:(-2,0)}] (-2,0) ellipse (2 and 1);
+            \draw[thick, red, fill=red!20, rotate around={-40:(3,-1)}] (3,-1) ellipse (2 and 1);
 
             \draw[thick, violet] (-7,1) -- (8,-2);
         \end{tikzpicture}
@@ -2717,9 +2717,10 @@ Parece intuitivo que el grupo fundamental de una circunferencia es el trivial ya
                 \node at (-0.25,1.7) {$1$};
 
                 % Vector x
-                \draw[thick, blue, ->] (0,0) -- (1, -0.25);
-                \node[blue] at (1.25, -0.25) {$x$};
-                \node[blue, anchor=north west] at (1.5, -0.25) {$(|x|=1)$};
+                \draw[thick, blue, ->] (0,0) -- (1.25, -0.3125);
+                \node[blue] at (1.5, -0.45) {$x$};
+                \node[blue, anchor=north west] at (1.75, -0.25) {$(|x|=1)$};
+                \draw[dashed, orange] (0,0) ellipse (1.5 and 0.65);
 
                 % Compactos
                 \draw[thick, red, fill=red!20, rotate around={-10:(-1,1)}] (-1,1) ellipse (0.5 and 0.25);
@@ -2729,8 +2730,8 @@ Parece intuitivo que el grupo fundamental de una circunferencia es el trivial ya
                 \node at (1.75,2) {$A_2$};
 
                 % Plano perpendicular
-                \draw[thick, blue] (1.33,2.5) -- (1.33,3.75) -- (-1.33,1.75) -- (-1.33,-1) -- (0.75,0.5);
-                \draw[blue, dashed] (0.75,0.5) -- (1.33,1) -- (1.33,2.5);
+                \draw[thick, blue] (1.33,2.5) -- (1.33,3.75) -- (-1.33,1.75) -- (-1.33,-1) -- (0.665,0.5);
+                \draw[blue, dashed] (0.665,0.5) -- (1.33,1) -- (1.33,2.5);
                 \draw[thick, violet] (-1.333,0.5) -- (1.33,2.5);
                 \node[violet] at (1.68,2.75) {$L_x$};
                 \node[blue] at (3,3) {$P_x^+$};
