--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -2684,8 +2684,8 @@ Parece intuitivo que el grupo fundamental de una circunferencia es el trivial ya
         \begin{tikzpicture}[scale=0.5]
             \shorthandoff{>}
 
-            \node at (-2,2) {$A_1$};
-            \node at (3,1) {$A_2$};
+            \node[red] at (-2,2) {$A_1$};
+            \node[red] at (3,1) {$A_2$};
 
             \draw[thick, red, fill=red!20, rotate around={30:(-2,0)}] (-2,0) ellipse (2 and 1);
             \draw[thick, red, fill=red!20, rotate around={-40:(3,-1)}] (3,-1) ellipse (2 and 1);
@@ -2708,33 +2708,40 @@ Parece intuitivo que el grupo fundamental de una circunferencia es el trivial ya
                 \shorthandoff{>}
 
                 % Ejes
-                \draw[thick, <-] (-1.5,-1.5) -- (0,0);
+                \draw[thick, <-] (-2,-2) -- (0,0);
                 \draw[thick] (0,0) -- (0,0.5);
                 \draw[dashed] (0,0.5) -- (0,1.5);
-                \draw[thick, ->] (0,1.5) -- (0,3);
+                \draw[thick, ->] (0,1.5) -- (0,4);
                 \draw[thick, ->] (0,0) -- (5,0);
 
                 \node at (-0.25,1.7) {$1$};
 
-                % Vector x
-                \draw[thick, blue, ->] (0,0) -- (1.25, -0.3125);
-                \node[blue] at (1.5, -0.45) {$x$};
-                \node[blue, anchor=north west] at (1.75, -0.25) {$(|x|=1)$};
+                % Esfera unidad
+                \draw[dashed, orange] (0,0) circle [radius=1.5];
                 \draw[dashed, orange] (0,0) ellipse (1.5 and 0.65);
+                \node[orange] at (1.5,-1) {$\bb{S}^2$};
+
+                % Vector x
+                \draw[thick, blue, ->] (0,0) -- (1.3, -0.325); %(1,-0.25)
+                \node[blue] at (1.75, -0.3255) {$x$};
+                \node[blue, anchor=north west] at (2, -0.25) {$(|x|=1)$};
 
                 % Compactos
                 \draw[thick, red, fill=red!20, rotate around={-10:(-1,1)}] (-1,1) ellipse (0.5 and 0.25);
-                \node at (-1,1.5) {$A_1$};
+                \node[red] at (-1,1.5) {$A_1$};
 
                 \draw[thick, red, fill=red!20, rotate around={5:(1,2)}] (1,2) ellipse (0.5 and 0.25);
-                \node at (1.75,2) {$A_2$};
+                \node[red] at (1.75,2) {$A_2$};
 
                 % Plano perpendicular
                 \draw[thick, blue] (1.33,2.5) -- (1.33,3.75) -- (-1.33,1.75) -- (-1.33,-1) -- (0.665,0.5);
                 \draw[blue, dashed] (0.665,0.5) -- (1.33,1) -- (1.33,2.5);
-                \draw[thick, violet] (-1.333,0.5) -- (1.33,2.5);
+                \draw[thick, violet] (-1.33,0.5) -- (1.33,2.5);
                 \node[violet] at (1.68,2.75) {$L_x$};
                 \node[blue] at (3,3) {$P_x^+$};
+                \node[blue] at (-1,3) {$P_x^-$};
+
+                \fill[blue, opacity=0.2] (-1.33,0.5) -- (1.33,2.5) -- (1.33,3.75) -- (-1.33,1.75) -- (-1.33,0.5) -- (-1.33,-1) -- (0.665,0.5) -- (-1.33,0.5);
 
                 % Plano horizontal
                 \draw[thick] (1.33,2.5) -- (5,2.5) -- (3,0.5) -- (-3,0.5) -- (-1,2.5) -- (-0.35,2.5);
