--- a/documents/Cuarto/Primer Cuatrimestre/Análisis Funcional/main.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Análisis Funcional/main.tex
@@ -3,6 +3,8 @@
 \input{../../../_assets/preambulo.tex}
 \input{../../../_assets/portada.tex}
 
+\newcommand{\T}{\tau}
+
 \begin{document}
     \portada[%
         titulo=Análisis Funcional,
