--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/losDelDGIIM/Temario_TopoII.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/losDelDGIIM/Temario_TopoII.tex
@@ -5,7 +5,8 @@
 \usepackage[all]{xy}
 \usepackage{ stmaryrd }
 
-\usepackage{scalerel} % para escalar la tilde según el contenido
+\usepackage{scalerel,stackengine}
+\stackMath % necesario para \ThisStyle
 
 \makeatletter
 \renewcommand{\tilde}[1]{%
@@ -17,16 +18,17 @@
 }
 
 \newcommand{\@smarttilde}[2]{%
-  \sbox0{$#1#2$}% medir ancho del argumento
+  \sbox0{$#1#2$}%
   \dimen0=\wd0%
-  % decidir tamaño según el ancho medido
   \ifdim\dimen0<1.6ex
     \mathaccent"0365{#2}% tilde pequeña estándar
   \else\ifdim\dimen0<3.5ex
     \widetilde{#2}% tilde normal
   \else
-    % tilde suavemente más ancha pero no desbordante
-    \ThisStyle{\raisebox{0.15ex}{\scalerel*[\LMpt]{\widetilde{\SavedStyle#2}}{\SavedStyle#2}}}%
+    % tilde escalada y MÁS PEGADA
+    \ThisStyle{%
+      \stackengine{0.05ex}{#2}{\stretchto{\widetilde{\phantom{#2}}}{1.07\ht\strutbox}}{O}{c}{F}{F}{L}%
+    }%
   \fi\fi
 }
 \makeatother
