--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_0.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_0.tex
@@ -74,7 +74,7 @@
         \end{align*}
         es un lazo basado en $x_0$ al que llamaremos \textbf{arco constante}. De hecho, si $X$ tiene la topología discreta, entonces los únicos arcos que hay en $X$ son los arcos constantes.
         \begin{proof}
-            Si $X$ tiene la topología discreta, entonces como $\alpha$ es continua $\alpha^{-1}(\{x_0\})$ será abierto y cerrado y por tanto $\alpha^{-1}(\{x_0\})\in\{\emptyset, X\}$ por ser $X$ conexo.
+            Si $X$ tiene la topología discreta, entonces como $\alpha$ es continua $\alpha^{-1}(\{x_0\})$ será abierto y cerrado y por tanto $\alpha^{-1}(\{x_0\})\in\{\emptyset, X\}$ por ser $[0,1]$ conexo.
         \end{proof}
 
 
@@ -111,9 +111,9 @@
 \begin{teo}
     Todo espacio topológico arcoconexo es conexo.
     \begin{proof}
-        Dado $x_0\in X$ fijo y otro punto $x\in X$ cualquiera, sabemos que existe $\alpha:[0,1]\to X$ un arco tal que $\alpha(0)=x_0$ y $\alpha(1)=x$. En particular, como el intervalo $[0,1]$ es conexo y $\alpha$ es continua, entonces se tiene que $\alpha([0,1])$ es conexo y podremos escribir 
+        Dado $x_0\in X$ fijo y otro punto $x\in X$ cualquiera, sabemos que existe $\alpha_x:[0,1]\to X$ un arco tal que $\alpha_x(0)=x_0$ y $\alpha_x(1)=x$. En particular, como el intervalo $[0,1]$ es conexo y $\alpha_x$ es continua, entonces se tiene que $\alpha_x([0,1])$ es conexo y podremos escribir 
         \begin{gather*}
-            X=\bigcup\limits_{x\in X}\{x\}\subseteq \bigcup\limits_{x\in X} \alpha_x ([0,1])\in X \Rightarrow X = \bigcup\limits_{x\in X}\alpha_x\{[0,1]\}
+            X=\bigcup\limits_{x\in X}\{x\}\subseteq \bigcup\limits_{x\in X} \alpha_x ([0,1])\subseteq X \Rightarrow X = \bigcup\limits_{x\in X}\alpha_x\{[0,1]\}
         \end{gather*}
         y además $x_0 \in \bigcap\limits_{x\in X}\alpha_x\{[0,1]\}$ por lo que $X$ es conexo (por el lema del peine).
     \end{proof}
@@ -168,7 +168,7 @@
     \end{gather*}
     tenemos que $Y$ es es conexo porque es unión de los $X_n$ que son todos conexos y que intersecan con $X_0$. Entonces, como $Y\subset X \subset \overline{Y}$ tenemos que $X$ es conexo. Veamos sin embargo que $X$ no es arcoconexo.\\
 
-    Para ello vamos a demostrar que si $\alpha:[0,1]\to X : \alpha$ es continua con $\alpha(0)=(0,0)$, entonces $\alpha(t)=(0,0)$ para todo $t\in [0,1]$.\\
+    Para ello vamos a demostrar que si $\alpha:[0,1]\to X$ tal que $\alpha$ es continua con $\alpha(0)=(0,0)$, entonces $\alpha(t)=(0,0)$ para todo $t\in [0,1]$.\\
 
     Podemos escribir la curva como $\alpha(t) = (x(t), y(t))\in \bb{R}^2$. Como $\alpha(0)=(0,0)$, si tomamos $((-\nicefrac{1}{2}, \nicefrac{1}{2})\times (-\nicefrac{1}{2}, \nicefrac{1}{2})) \cap X$ un abierto que contiene al origen, entonces $\exists \veps > 0$ tal que $\alpha([0,\veps))\subseteq ((-\nicefrac{1}{2}, \nicefrac{1}{2})\times (-\nicefrac{1}{2}, \nicefrac{1}{2})) \cap X$ por ser $\alpha$ continua. Como $y(t)$ es continua y se tiene que $y([0,\veps))\subseteq \{0\}\cup\left(\bigcup\limits_{n>2} \left\{\frac{1}{n}\right\}\right)$. Por el teorema del valor intermedio tenemos que $y([0,\veps)) = \{0\}$ por lo que $\alpha([0,\veps))=\{(0,0)\}$. De esta forma hemos probado que no hay ningún arco que conecte $(0,0)$ con un punto distinto (el único arco es el constante).
 \end{ejemplo}
