--- a/documents/Cuarto/Primer Cuatrimestre/Análisis Funcional/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Análisis Funcional/Tema_1.tex
@@ -172,3 +172,10 @@
         \end{enumerate}
     \end{proof}
 \end{prop}
+
+\begin{definicion}
+    Sea $f:(E,\T)\to \bb{R}$ una aplicación, diremos que es \textbf{secuencialmente semicontinua inferiormente}\footnote{término utilizado por Tonelli a principios del siglo XX} si 
+    \begin{gather*}
+        \forall \{x_n\} \overset{\T}{\to} x \Rightarrow f(x) \leq \liminf\limits_{n\to \infty} f(x_n)
+    \end{gather*}
+\end{definicion}
