--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -3029,4 +3029,111 @@ En primer lugar fijaremos los preliminares algebraicos necesarios para estudiar 
     \begin{gather*}
         G_1 \ast G_2 = \{1, a, b, ab, ba, aba, bab, ...\}
     \end{gather*}
+    donde 
+    \begin{gather*}
+        a^{-1} = a,\ \ b^{-1}=b,\ \ (ab)^{-1}=ba,\ \ (aba)^{-1}=aba,\ \ (bab)^{-1} = bab
+    \end{gather*}
+\end{ejemplo}
+
+\begin{lema}[Propiedad universal del producto libre]
+    Sea $\{G_i\}_{i\in I}$ una familia de grupos disjuntos \footnote{dos a dos}. Consideramos una familia de homeomorfismos
+    \begin{gather*}
+        f_i: G_i \to G
+    \end{gather*}
+    sobre un grupo $G$ fijo. Entonces existe un único homomorfismo
+    \begin{gather*}
+        f_i \ast G_i \to G
+    \end{gather*}
+    tal que el siguiente diagrama conmuta:
+    \begin{gather*}    
+        \xymatrix{ %
+            G_i \ar[rr]^{f_i} \ar[dr]_{h_i} && G\\
+            & \underset{i\in I}{\ast}G_i \ar@{-->}[ur]_{f}
+        }
+    \end{gather*}
+    donde $h_{i_0}:G_{i_0}\to \underset{i\in I}{\ast} G_i$ es el homomorfismo inclusión. En la práctica se tendrá que 
+    \begin{gather*}
+        f(x_1,...,x_n) = f_{i_1}(x_1) \cdot ... \cdot f_{i_n}(x_n)
+    \end{gather*}
+    donde $x_k \in G_{i_k}$ para todo $k\in \{1,...,n\}$.
+\end{lema}
+
+\section{Grupos libres y presentaciones de grupos}
+
+Vamos a ver ahora productos libres donde cada $G_i$ es isomorfo a $\bb{Z}$. Sea $S=\{a\}$ un conjunto con un único elemento. Definimos el conjunto
+\begin{gather*}
+    F(a)=\{a^k : k\in \bb{Z}\}
+\end{gather*}
+donde definimos además la operación 
+\begin{gather*}
+    a^k \cdot a^l := a^{k+l}
+\end{gather*}
+De esta forma, $(F(a), \cdot)$ es isomorfo a $\bb{Z}$
+\begin{gather*}
+    a^k \leftrightarrow k
+\end{gather*}
+
+\begin{definicion}
+    A $F(a)$ se le suele llamar el \textbf{grupo libre de rango 1} generado por $a$.
+\end{definicion}
+
+\begin{definicion}
+    Dado un conjunto $S$ cualquiera no vacío definimos $F(S)$ como 
+    \begin{gather*}
+        F(S)=\underset{a\in S}\ast F(a)
+    \end{gather*}
+    y se le suele llamar \textbf{grupo libre} generado por $S$.
+\end{definicion}
+
+\begin{ejemplo}
+    $F(a,b)$ tiene como elementos:
+    \begin{gather*}
+        a^2,\ b^3,\ ab,\ ba\ \ (ab\neq ba) ,\ a^3b^7a^8,\ a^{-2}b^{-1},\ 1,...
+    \end{gather*}
+    Algunos de los elementos que no están en el grupo libre son:
+    \begin{gather*}
+        a^0,\ a^2a^3b^2b^7
+    \end{gather*}
+\end{ejemplo}
+
+\begin{definicion}
+    Cuando el conjunto $S=\{a_1,...,a_n\}$ es finito con $n$ elementos se suele decir que $F(S)$ es el \textbf{grupo libre de rango $n$} sobre $S$ y se suele denotar por $\bb{Z}\ast \overset{(n)}{...} \ast \bb{Z}$.
+\end{definicion}
+
+\begin{observacion}
+    Esto se puede hacer ya que el nombre de los elementos no es importante, y por ejemplo se tendría que $F(a,b)\cong F(c,d)$.
+\end{observacion}
+
+\begin{coro}[Propiedad universal del grupo libre]
+    Dados $S$ un conjunto no vacío, $G$ un grupo y $\rho : S \to G$ una aplicación, existe un único homomorfismo 
+    \begin{gather*}
+        f:F(S) \to G
+    \end{gather*}
+    tal que $f_{|_S}=\rho$. En la práctica se tendrá que 
+    \begin{gather*}
+        f(a_1^{n_1}a_2^{n_2}...a_k^{n_k}) = \rho(a_1)^{n_1} \cdot \rho(a_2)^{n_2} \cdot ... \cdot \rho(a_k)^{n_k} 
+    \end{gather*}
+    con $a_i\in S$ y $n_i\in \bb{Z}\setminus\{0\}$.
+\end{coro}
+
+\begin{observacion}
+    De esta forma, de la propiedad anterior se deduce que de todo grupo $G$ se puede ver como un grupo libre sobre un subgrupo normal suyo.
+\end{observacion}
+
+\begin{definicion}
+    Sean $S$ un conjunto no vacío y $F(S)$ el grupo libre sobre $S$. Dado un subconjunto no vacío $R\subseteq F(S)$. Entonces al grupo cociente
+    \begin{gather*}
+        \frac{F(S)}{\langle R \rangle_N}
+    \end{gather*}
+        
+    lo denotaremos de la forma $\langle S | R \rangle$ o bien $\langle S;R \rangle$. El resultado anterior nos dice que todo grupo $G$ es de la forma $\langle S;R\rangle$ para ciertos $S$ y $R$, donde $S$ serán los generadores y $R$ las relaciones. A $\langle S;R \rangle$ se le suele llamar \textbf{presentación}.
+\end{definicion}
+
+\begin{ejemplo}\
+    \begin{enumerate}
+        \item $\langle a; a^n \rangle$ es una presentación de 
+        \begin{gather*}
+            \frac{F(a)}{\langle a^n \rangle_N} = \frac{\{a^k : k\in \bb{Z}\}}{}
+        \end{gather*}
+    \end{enumerate}
 \end{ejemplo}
