--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_0.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_0.tex
@@ -220,7 +220,7 @@
 
     \begin{proof}\
         \begin{itemize}
-            \item[$\Rightarrow$)] Hemos visto que si $X$ es arcoconexo, entonces $X$ es conexo. Además, $X$ es entorno de cualquier punto suyo luego todo punto tiene un entorno conexo.
+            \item[$\Rightarrow$)] Hemos visto que si $X$ es arcoconexo, entonces $X$ es conexo. Además, $X$ es entorno de cualquier punto suyo luego todo punto tiene un entorno arcoconexo.
             \item[$\Leftarrow$)] Elegimos un $x\in X$ fijo y definimos $A = \{y\in X : \exists \alpha_y \text{ arco uniendo $x$ con $y$ }\}$
             
             Como $x\in A$ tenemos que $A\neq \emptyset$. Si probamos que $A$ es abierto y cerrado, entonces como $X$ es conexo tendremos que $A=X$, es decir podremos unir $x$ con cualquier otro punto $y\in X$.\\
