--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -3502,7 +3502,7 @@ Si consideramos ahora $g=[\beta]_{U\cap V}$ tendríamos que
         \end{gather*}
         Por el teorema de Seifert-van Kampen tenemos que 
         \begin{gather*}
-            \pi_1(X,x_0) \cong (\bb{Z} \ast \overset{(m)}{...}\ast \bb{Z}) \ast \bb{Z} \cong \bb{Z} \ast \overset{(m+1)}{...}\ast \bb{Z}
+            \pi_1(X,x_0) \cong (\bb{Z} \ast \overset{(m)}{...}\ast \bb{Z}) \ast \bb{Z} = \bb{Z} \ast \overset{(m+1)}{...}\ast \bb{Z}
         \end{gather*}
 
         \item Consideramos en $\bb{R}^2$ el siguiente conjunto para $n\in \bb{N}$
