--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -1327,7 +1327,7 @@
         \end{gather*}
         Sabiendo que $\hat{\alpha}(1) = \phi([\alpha])$ y $\hat{\beta}(1) = \phi([\beta])$. Como $\hat{\alpha}(1)=\hat{\beta}(1)$ consideramos $\hat{\alpha} \ast \tilde{\hat{\beta}}$ que es un lazo basado en $r_0$. Como $R$ es simplemente conexo tenemos que
         \begin{gather*}
-            [\hat{\alpha}] \ast \left[\tilde{\hat{\beta}}\right] = \left[\hat{\alpha} \ast \tilde{\hat{\beta}}\right] = [\veps_{r_0}]
+             \left[\tilde{\hat{\beta}}\right] \ast [\hat{\alpha}] = \left[ \tilde{\hat{\beta}} \ast \hat{\alpha}\right] = [\veps_{r_0}]
         \end{gather*}
         por lo que se tiene 
         \begin{gather*}
@@ -1397,9 +1397,9 @@
                 \end{array}
             \right\} = (\alpha \ast \beta)
         \end{align*}
-        por lo que $\hat{\alpha\ast\beta}$ es un levantamiento de $\alpha \ast \beta$ con $\hat{\alpha \ast \beta}(0) = \hat{\alpha}(0)$ por lo que por definición tenemos que 
+        por lo que $\widehat{\alpha\ast\beta}$ es un levantamiento de $\alpha \ast \beta$ con $\hat{\alpha \ast \beta}(0) = \widehat{\alpha}(0)$ por lo que por definición tenemos que 
         \begin{gather*}
-            \deg(\alpha \ast \beta) = \widehat{\alpha \ast \beta}(1) = \hat{\alpha}(1) + \hat{\beta}(1) = \deg(\alpha) + \deg(\beta)
+            \deg(\widehat{\alpha \ast \beta}) = \widehat{\alpha \ast \beta}(1) = \hat{\alpha}(1) + \hat{\beta}(1) = \deg(\alpha) + \deg(\beta)
         \end{gather*}
     \end{proof}
 \end{teo}
