--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_1.tex
@@ -3165,7 +3165,7 @@ De esta forma, $(F(a), \cdot)$ es isomorfo a $\bb{Z}$
     \end{enumerate}
 \end{ejemplo}
 
-\section{Enunciado del teorema}
+\subsection{Enunciado del teorema}
 
 \begin{teo}[Seifert-van Kampen]
     Sean $X$ un e.t. y $U,V$ dos abiertos suyos cumpliendo:
