--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
@@ -73,3 +73,110 @@
         por lo que para cada $x\in V$ se tendrá que $f_1(x)\neq f_2(x)$ ya que $f_1(x)\in A_{i_1}$ y $f_2(x)\in A_{i_2}$. Esto nos dice que $V\subseteq X\setminus Y$, luego $Y$ es cerrado.
     \end{proof}
 \end{lema}
+
+\begin{teo}[Teorema de monodromía]
+    Sean $p:R \to B$ una aplicación recubridora, $b_0\in V$ y $r_0\in p^{-1}(b_0)$. El homomorfismo inducido $p_*:\pi_1(R,r_0)\to \pi_1(B,b_0)$ es inyectivo. En partircular, $\pi_1(R,r_0)$ es isomorfo a $p_*(\pi_1(R,r_0))< \pi_1(B,b_0)$.
+
+    \begin{proof}
+        Sabemos que $p_*$ es inyectiva si y solo si $\ker(p_*)$ es trivial. Tomamos $\alpha$ lazo basado en $r_0$ tal que 
+        \begin{gather*}
+            p_*([\alpha]) = [\veps_{b_0}]
+        \end{gather*}
+        Como además $[p\circ \alpha] = p^*([\alpha])$ tenemos que existe una homotopía por lazos de $\veps_{b_0}$ en $p\circ \alpha$. Como toda homotopía por arcos se puede levantar tenemos que existe una homotopía por arcos en $R$ de $\hat{\veps}_{b_0}$ y $\widehat{p\circ \alpha}$ (empezando en $r_0$). Tenemos
+        \begin{gather*}
+            \left.
+            \begin{array}{l}
+                \hat{\veps}_{b_0} = \veps_{r_0}\\\\
+                \widehat{p\circ \alpha} = \alpha
+            \end{array}
+            \right\}  \Rightarrow [\alpha] = [\veps_{r_0}]
+        \end{gather*}
+    \end{proof}
+\end{teo}
+
+\begin{observacion}
+    Recordemos que dados dos subgrupos $H_1,H_2$ de un grupo $G$ se dice que $H_1$ y $H_2$ son conjugados si existe un $g\in G$ tal que 
+    \begin{gather*}
+        H_2=g^{-1}H_1 g
+    \end{gather*}
+\end{observacion}
+
+\begin{coro}
+    Sean $p:R \to B$ una aplicación recubridora, $b_0\in B$ y $r_1,r_2\in p^{-1}(b_0)$. Elegimos un arco $\alpha:[0,1]\to R$ tal que
+    \begin{gather*}
+        \alpha(0)=r_1\\
+        \alpha(1)=r_2
+    \end{gather*}
+    entonces 
+    \begin{gather*}
+        p_*(\pi_1(R,r_2)) = [p\circ\alpha]^{-1} \ast p_*(\pi_1(R,r_1)) \ast [p\circ\alpha]
+    \end{gather*}
+    En particular, $p_*(\pi_1(R,r_1))$ y $p_*(\pi_1(R,r_2))$ son conjugados en $\pi_1(B,b_0)$.
+
+    \begin{proof}
+        Sabemos que $p\circ \alpha$ es un lazo basado en $b_0$ por lo que $[p\circ \alpha]\in \pi_1(B,b_0)$. Además,
+        \begin{align*}
+            \pi_1(R,r_2) &\overset{isom.}{\to} \pi_1(R,r_1)\\
+            [\beta] &\mapsto [\alpha \ast \beta \ast \tilde{\alpha}]
+        \end{align*}
+        Tenemos por tanto que 
+        \begin{gather*}
+            \pi_1(R,r_1) = [\alpha] \ast \pi_1(R,r_2) \ast [\tilde{\alpha}]\\
+            p_*(\pi_1(R,r_1)) = [p\circ \alpha] \ast p_*(\pi_1(R,r_2)) \ast [p\circ \tilde{\alpha}]
+        \end{gather*}
+        Como tenemos que 
+        \begin{gather*}
+            [p\circ \tilde{\alpha}] = [\tilde{p\circ \alpha}] = [p\circ \alpha]^{-1}
+        \end{gather*}
+        llegamos a que son conjugados.
+    \end{proof}
+\end{coro}
+
+\begin{coro}
+    Sean $p:R\to B$ una aplicación recubridora, $b_0\in B$ y $r_1\in p^{-1}(b_0)$. Sea $H$ un subgrupo conjugado de $p_*(\pi_1(R,r_1))$ en $\pi_1(B,b_0)$. Entonces existe un punto $r_2\in R$ tal que
+    \begin{gather*}
+        H=p_*(\pi_1(R,r_2))
+    \end{gather*}
+    \begin{proof}
+        Por hipótesis sabemos que $p(r_1)=b_0$ y que $p_*(\pi_1(R,r_1))$ es conjugado con $H$ en $\pi_1(B,b_0)$, es decir, 
+        \begin{gather*}
+            H = g^{-1} \ast p_*(\pi_1(R,r_1)) \ast g
+        \end{gather*}
+        con $g\in \pi_1(B,b_0)$, esto es, $g=[\gamma]$. Consideramos $\hat{\gamma}$ el levantamiento de $\gamma$ a $R$ con 
+        \begin{gather*}
+            \hat{\gamma}(0) = r_1
+        \end{gather*}
+        y llamamos $r_2=\hat{\gamma}(1)$ al final del arco.
+        \begin{gather*}
+            p(r_2) = (p\circ \hat{\gamma})(1) = \gamma(1) = b_0
+        \end{gather*}
+        Usando el corolario anterior tenemos que 
+        \begin{align*}
+            p_*(\pi_1(R,r_2)) &= [p\circ \hat{\gamma}]^{-1} \ast p_*(\pi_1(R,r_1)) \ast [p\circ \hat{\gamma}] =\\
+            &= [\gamma]^{-1} \ast p_*(\pi_1(R,r_1)) \ast [\gamma] =\\
+            &= H
+        \end{align*}
+    \end{proof}
+\end{coro}
+
+\begin{teo}
+    Consideramos una aplicación recubridora $p:R\to B$, una aplicación continua $f:X\to B$, $x_0\in X$, $b_0=f(x_0)$ y $r_0\in p^{-1}(b_0)$. 
+    
+    \begin{gather*}
+        \xymatrix{
+            & R \ar[d]^p\\
+            X \ar[r]^{f} \ar@{-->}[ur]^{\hat{f}} & B
+        }
+    \end{gather*}
+
+    Entonces son equivalentes:
+    \begin{enumerate}
+        \item Existe un levantamiento $\hat{f}:X \to R$ de $f$ con $\hat{f}(x_0)=r_0$.
+        \item $f_*(\pi_1(X,x_0))\subset p_*(\pi_1(R,r_0))$
+    \end{enumerate}
+    Además, si se cumple cualquiera de estas condiciones, el levantamiento $\hat{f}$ de $f$ con $\hat{f}(x_0)=r_0$ es único.
+\end{teo}
+
+\begin{observacion}
+    Una consecuencia inmediata es que si $X$ es simplemente conexo, toda $X:X\to B$ continua se puede levantar.
+\end{observacion}
