--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/main.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/main.tex
@@ -48,9 +48,9 @@
     \newpage
     \thispagestyle{empty}
 
-    % \input{Tema_0.tex}
+    \input{Tema_0.tex}
 
-    % \input{Tema_1.tex}
+    \input{Tema_1.tex}
 
     \input{Tema_2.tex}
 \end{document}
