--- a/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Topología II/Tema_2.tex
@@ -290,3 +290,103 @@
 \begin{observacion}
     Una consecuencia inmediata es que si $X$ es simplemente conexo, toda $X:X\to B$ continua se puede levantar.
 \end{observacion}
+
+\begin{ejemplo}
+    Consideramos la aplicación recubridora
+    \begin{align*}
+        p: \bb{S}^1 \times \bb{R} &\to \bb{S}^1 \times \bb{R}\\
+        (x,y,z) & \mapsto (x^2 -y^2, 2xy,z)
+    \end{align*}
+    y las aplicaciones $f_1,f_2 : \bb{S}^1 \to \bb{S}^1 \times \bb{R}$ dadas por 
+    \begin{gather*}
+        f_1(x,y) = (x,y,x)\\
+        f_2(x,y) = (-2xy, x^2-y^2, x^2)
+    \end{gather*}
+    Nos preguntamos si existen levantamientos de $f_1$ y $f_2$, es decir si existen los $\hat{f_1}$, $\hat{f_2}$ que hacen conmutar el siguiente diagrama
+    \begin{gather*}
+        \xymatrix{
+            && \bb{S}^1 \times \bb{R} \ar[d]^p\\
+            \bb{S}^1 \ar@{-->}[urr]^{\hat{f_1}, \hat{f_2}} \ar[rr]_{f_1,f_2} && \bb{S}^1\times \bb{R}
+        }
+    \end{gather*}
+    Con la siguiente gráfica
+
+    podemos ver que $\pi_1(\bb{S}^1,(1,0))$ está generado por $[\alpha]$ con 
+    \begin{gather*}
+        \alpha(t) = (\cos(2\pi t), \sen(2\pi t))
+    \end{gather*}
+    y $\pi_1(\bb{S}^1\times \bb{R}, (1,0,1))$ está generado por $[\beta]$ con 
+    \begin{gather*}
+        \beta(t) = (\cos(2\pi t), \sen(2\pi t), 1)
+    \end{gather*}
+    Además tenemos que 
+    \begin{gather*}
+        f_{1*}([\alpha]) = [f_1 \circ \alpha] = [\beta]\\
+        f_{1*}(\pi_1(\bb{S}^1, (1,0))) = \pi_1(\bb{S}^1\times \bb{R}, (1,0,1))
+    \end{gather*}
+    Ahora calculamos
+    \begin{gather*}
+        p_*(\pi_1(\bb{S}^1 \times \bb{R}, (1,0,1)))
+    \end{gather*}
+    Sabemos que 
+    \begin{gather*}
+        \pi_1(\bb{S}^1 \times \bb{R}, (1,0,1)) = \{[\beta]^n : n\in \bb{Z}\}
+    \end{gather*}
+    y además
+    \begin{align*}
+        (p\circ \beta)(t) &= (\cos^2(2\pi t) - \sen^2(2\pi t), 2\cos (2\pi t)\sen(2\pi t), 1) =\\
+        &= (\cos(4\pi t), \sen(4\pi t), 1) = (\beta \ast \beta)(t)
+    \end{align*}
+    por lo que 
+    \begin{gather*}
+        p_*([\beta]) = [p\circ \beta] = [\beta]^2\\
+        p_*(\pi_1(\bb{S}^1 \times \bb{R}, (1,0,1))) = \{[\beta]^{2n} : n\in \bb{Z}\}
+    \end{gather*}
+
+    Sabemos por el teorema visto que existe un $\hat{f_1} : \bb{S}^1 \to \bb{S}^1 \times \bb{R}$ levantamiento de $f_1$ con $\hat{f_1}(1,0)=(1,0,1)$ si y solo si se tiene que 
+    \begin{gather*}
+        f_{1*}(\pi_1(\bb{S}^1, (1,0))) \subseteq p_*(\pi_1(\bb{S}^1 \times \bb{R}, (1,0,1)))
+    \end{gather*}
+    Como tenemos que 
+    \begin{gather*}
+        f_{1*}(\pi_1(\bb{S}^1, (1,0))) = \{[\beta]^k : k\in \bb{Z}\}\\
+        p_*(\pi_1(\bb{S}^1 \times \bb{R}, (1,0,1))) = \{[\beta]^{2m}: m\in \bb{Z}\}
+    \end{gather*}
+    por lo que 
+    \begin{gather*}
+        f_{1*}(\pi_1(\bb{S}^1, (1,0))) \nsubseteq p_*(\pi_1(\bb{S}^1 \times \bb{R}, (1,0,1)))
+    \end{gather*}
+    y tenemos que no existe $\hat{f_1} : \bb{S}^1 \to \bb{S}^1 \times \bb{R}$ levantamiento de $f_1$ con $\hat{f_1}(1,0)=(1,0,1)$.
+
+    Si tomamos otro punto $r_1$ cualquiera tal que $p(r_1)=(1,0,1)$ ($r_1$ colo podría ser el $(-1,0,1)$) entonces sabemos por un corolario anterior que 
+    \begin{gather*}
+        p_*(\pi_1(\bb{S}^1\times \bb{R}, r_1)) \text{ es conjugado de } p_*(\pi_1(\bb{S}^1 \times \bb{R}, (1,0,1)))
+    \end{gather*}
+    Como el grupo total es abeliano, entonces estos dos grupos son idénticos.\\
+    
+    Veamos qué ocurre con $f_2$. En este caso tenemos que 
+    \begin{gather*}
+        f_2(1,0) = (1,0,1)
+    \end{gather*}
+    Además, $[\alpha]$ genera $\pi_1(\bb{S}^1, (1,0))$ y $[\gamma]$ genera $\pi_1(\bb{S}^1 \times \bb{R}, (0,1,1))$ donde 
+    \begin{gather*}
+        \gamma(t) = \left(\cos\left(2\pi t + \frac{\pi}{2}\right), \sen\left(2\pi t + \frac{\pi}{2}\right), 1\right)
+    \end{gather*}
+    Queremos calcular $f_2\circ \alpha$:
+    \begin{align*}
+        (f_2\circ \alpha)(t) &= (-2\cos(2\pi t)\sen(2\pi t), \cos^2(2\pi t) - \sen^2(2\pi t), \cos^2(2\pi t)) = \\
+        &= (-\sen(4\pi t), -\cos(4\pi t), \cos^2(2\pi t)) =\\
+        &= (\sen(-4\pi t), \cos(-4\pi t), \cos^2(2\pi t)) =\\
+        &= \left(\cos\left(\frac{\pi}{2} + 4\pi t\right), \sen\left(\frac{\pi}{2} + 4\pi t\right), \cos^2(2\pi t)\right)
+    \end{align*}
+    y podemos concluir que 
+    \begin{gather*}
+        f_{2*}([\alpha]) = [f_2\circ \alpha] = [\gamma \ast \gamma] = [\gamma]^2
+    \end{gather*}
+    por lo que
+    \begin{align*}
+        f_{2*}(\pi_1(\bb{S}^1,(1,0))) &= \{[\gamma]^{2n} : n\in \bb{Z}\} =\\
+        &= p_*\left(\bb{S}^1 \times \bb{R}, \left(\frac{1}{\sqrt{2}}, \frac{1}{\sqrt{2}}, 1\right), \right) 
+    \end{align*}
+    y tenemos finalmente que existe el levantamiento $\hat{f_2}$ con $\hat{f_2}(1,0)=(0,1,1)$
+\end{ejemplo}
